bug fix for JDK18